--- a/layoutit/src/index.html
+++ b/layoutit/src/index.html
@@ -35,8 +35,20 @@
 <body>
 <div class="container">
 	<div class="row clearfix">
+		<div class="col-md-4 column">
+		</div>
+		<div class="col-md-4 column">
+			<img class="img-circle" alt="140x140" src="http://lorempixel.com/140/140/">
+			<h3 class="text-center">
+				h3. Lorem ipsum dolor sit amet.
+			</h3>
+		</div>
+		<div class="col-md-4 column">
+		</div>
+	</div>
+	<div class="row clearfix">
 		<div class="col-md-12 column">
-			<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+			<nav class="navbar navbar-default navbar-static-top" role="navigation">
 				<div class="navbar-header">
 					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">Brand</a>
 				</div>
@@ -109,30 +121,18 @@
 		</div>
 	</div>
 	<div class="row clearfix">
-		<div class="col-md-4 column">
-		</div>
-		<div class="col-md-4 column">
-			<img class="img-circle" alt="140x140" src="http://lorempixel.com/140/140/">
-			<h3 class="text-center">
-				h3. Lorem ipsum dolor sit amet.
-			</h3>
-		</div>
-		<div class="col-md-4 column">
-		</div>
-	</div>
-	<div class="row clearfix">
 		<div class="col-md-12 column">
 			<div class="carousel slide" id="carousel-605077">
 				<ol class="carousel-indicators">
-					<li data-slide-to="0" data-target="#carousel-605077">
+					<li class="active" data-slide-to="0" data-target="#carousel-605077">
 					</li>
-					<li data-slide-to="1" data-target="#carousel-605077" class="active">
+					<li data-slide-to="1" data-target="#carousel-605077">
 					</li>
 					<li data-slide-to="2" data-target="#carousel-605077">
 					</li>
 				</ol>
 				<div class="carousel-inner">
-					<div class="item">
+					<div class="item active">
 						<img alt="" src="http://lorempixel.com/1600/500/sports/1">
 						<div class="carousel-caption">
 							<h4>
@@ -143,7 +143,7 @@
 							</p>
 						</div>
 					</div>
-					<div class="item active">
+					<div class="item">
 						<img alt="" src="http://lorempixel.com/1600/500/sports/2">
 						<div class="carousel-caption">
 							<h4>
